--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-</head>
-<body>
-    <h1>home</h1>
-</body>
-
+    <link rel="stylesheet" href="../stylesheets/output.css" />
+  </head>
+  <body>
+    <h1 class="text-3xl">home</h1>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  </body>
 </html>
