--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../stylesheets/output.css" />
+    <link rel="stylesheet" href="../stylesheets/style.css" />
   </head>
   <body>
-    <h1 class="text-3xl">home</h1>
+    <div class="main w-full min-h-screen bg-zinc-900 text-white">
+      <div class="p-10 ">
+        <form action="/create" method="post">
+          <input
+            type="text"
+            class="block px-5 py-2 bg-zinc-800 w-full rounded-md outline-none"
+            name="title"
+            placeholder="Title goes here"
+          />
+          <textarea
+            name="details"
+            id=""
+            class="block px-5 py-2 mt-2 bg-zinc-800 resize-none w-full rounded-md outline-none"
+            placeholder="Write you task details here"
+          ></textarea>
+          <button class="mt-2 bg-blue-600 px-5 py-2" type="submit">
+            Create Task
+          </button>
+        </form>
+    </div>
+    <div class="tasks flex gap-3 flex-wrap p-10">
+        <% if (files.length > 0 ){ %>       
+            <% files.forEach((val)=>{ %>
+                <div class="task min-w-72 px-3 py-4 bg-zinc-800">
+                    <h1 class="text-3xl tracking-tighter"><%= val %></h1>
+                    <a href="/file/<%=val%>" class="text-blue-500 inline-block mt-3">Read More.</a>
+                    <a href="/edit/<%=val%>" class="text-blue-500 inline-block mt-3 float-right">Edit</a>
+                </div>
+           <% })%>     
+        <% } else { %>
+            <h3 class="text-zinc-600">No tasks yet</h3>
+      <%  } %>
+      <!-- <div class="task w-72 px-3 py-4 bg-zinc-800 hidden">
+        <h1 class="text-3xl tracking-tighter">Some task goes here.</h1>
+        <a href="" class="text-blue-500 inline-block mt-3">Read More.</a>
+      </div>
+      <div class="task w-72 px-3 py-4 bg-zinc-800 hidden">
+        <h1 class="text-3xl tracking-tighter">Some task goes here.</h1>
+        <a href="" class="text-blue-500 inline-block mt-3">Read More.</a>
+      </div>
+      <div class="task w-72 px-3 py-4 bg-zinc-800 hidden">
+        <h1 class="text-3xl tracking-tighter">Some task goes here.</h1>
+        <a href="" class="text-blue-500 inline-block mt-3">Read More.</a>
+      </div> -->
+    </div>
+    </div>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   </body>
 </html>
