added edited function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,8 @@
                     <h1 class="text-3xl tracking-tighter"><%= val %></h1>
                     <a href="/file/<%=val%>" class="text-blue-500 inline-block mt-3">Read More.</a>
                     <a href="/edit/<%=val%>" class="text-blue-500 inline-block mt-3 float-right">Edit</a>
+                    <a href="/delete/<%=val%>" class="text-red-500 inline-block mt-3 float-right me-6">Delete</a>
+
                 </div>
            <% })%>     
         <% } else { %>
