--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,21 +10,23 @@
     <div class="main w-full min-h-screen bg-zinc-900 text-white p-10">
         <a class="text-blue-500 inline-block mb-10" href="/">Go Back To Home</a>
 
-        <form action="" method="post">
+        <form action="/edit" method="post">
             <input
               type="text"
-              class="block px-5 py-2 bg-zinc-800 w-full rounded-md outline-none"
-              name="title"
+              class="block px-5 w-1/4 py-2 bg-zinc-800 rounded-md outline-none text-zinc-500"
+              name="previous"
+              readonly
+              value="<%= oldName%>"
               placeholder="Previous Name"
             />
             <input
               type="text"
-              class="block px-5 py-2 bg-zinc-800 w-full rounded-md outline-none mt-2"
-              name="title"
+              class="block px-5 w-1/4 py-2 bg-zinc-800  rounded-md outline-none mt-2"
+              name="new"
               placeholder="New Name"
             />
             <button class="mt-2 bg-blue-600 px-5 py-2" type="submit">
-              Create Task
+              Update Name
             </button>
           </form>
     </div>
